Fix navbar styling issues with inter item spacing

--- a/frontend/sass/abstracts/_mixins.scss
+++ b/frontend/sass/abstracts/_mixins.scss
@@ -139,7 +139,7 @@
 	visibility: visible;
 	opacity: 1;
 	height: auto;
-	transform: translateY(2px) scale(1);
+	transform: translateY(0px) scale(1);
 }
 
 @mixin bridge-title-pics($sepia: 0.5, $blur: 5px, $contrast: 1) {
